# trading-system

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  main.cpp
data/: bars.csv
include/: event_queue.hpp  events.hpp  execution_engine.hpp  market_data_engine.hpp  order.hpp  order_book.hpp  order_loader.hpp  strategy_engine.hpp  tick.hpp  tick_loader.hpp
src/: CMakeLists.txt  event_queue.cpp  events.cpp  execution_engine.cpp  market_data_engine.cpp  order.cpp  order_book.cpp  strategy_engine.cpp  tick.cpp  tick_loader.cpp
strategies/: mean_reversion.py  momentum.py  pairs.py
